outputs/tsp_constructive-constructive/2025-09-20_10-19-13/evaluations/problem_eval3457503135527333845_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (e.g., node degree or centrality), introducing a novel cost function to select the next node as a weighted combination of distance and node significance, with a fallback to the destination when no unvisited nodes remain.}
                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (e.g., node degree or centrality), introducing a novel cost function to select the next node as a weighted combination of distance and node significance, with a fallback to the destination when no unvisited nodes remain.}
                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'
